--- a/templates/admin/competitors.html
+++ b/templates/admin/competitors.html
@@ -10,11 +10,11 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Callsign</th>
-            <th>Role</th>
-            <th>Status</th>
-            <th>Registered</th>
-            <th>Actions</th>
+            <th scope="col">Callsign</th>
+            <th scope="col">Role</th>
+            <th scope="col">Status</th>
+            <th scope="col">Registered</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
