--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -29,11 +29,11 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Period</th>
-            <th>Qualifying</th>
-            <th>Status</th>
-            <th>Actions</th>
+            <th scope="col">Name</th>
+            <th scope="col">Period</th>
+            <th scope="col">Qualifying</th>
+            <th scope="col">Status</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
