--- a/templates/admin/matches.html
+++ b/templates/admin/matches.html
@@ -23,10 +23,10 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Target</th>
-            <th>Start Date</th>
-            <th>End Date</th>
-            <th>Actions</th>
+            <th scope="col">Target</th>
+            <th scope="col">Start Date</th>
+            <th scope="col">End Date</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
