--- a/templates/admin/olympiads.html
+++ b/templates/admin/olympiads.html
@@ -8,13 +8,13 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Start Date</th>
-            <th>End Date</th>
-            <th>Qualifying</th>
-            <th>Status</th>
-            <th>Actions</th>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Start Date</th>
+            <th scope="col">End Date</th>
+            <th scope="col">Qualifying</th>
+            <th scope="col">Status</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
