--- a/templates/admin/sport_competitors.html
+++ b/templates/admin/sport_competitors.html
@@ -17,10 +17,10 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Callsign</th>
-            <th>Medals</th>
-            <th>Status</th>
-            <th>Actions</th>
+            <th scope="col">Callsign</th>
+            <th scope="col">Medals</th>
+            <th scope="col">Status</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
