--- a/templates/admin/sports.html
+++ b/templates/admin/sports.html
@@ -11,10 +11,10 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Target Type</th>
-            <th>Modes</th>
-            <th>Actions</th>
+            <th scope="col">Name</th>
+            <th scope="col">Target Type</th>
+            <th scope="col">Modes</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
