--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -256,10 +256,10 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Sport</th>
-            <th>Olympiad</th>
-            <th>Medals</th>
-            <th>Points</th>
+            <th scope="col">Sport</th>
+            <th scope="col">Olympiad</th>
+            <th scope="col">Medals</th>
+            <th scope="col">Points</th>
         </tr>
     </thead>
     <tbody>
@@ -285,9 +285,9 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Record Type</th>
-            <th>Value</th>
-            <th>Date</th>
+            <th scope="col">Record Type</th>
+            <th scope="col">Value</th>
+            <th scope="col">Date</th>
         </tr>
     </thead>
     <tbody>
@@ -317,11 +317,11 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Sport</th>
-            <th>Target</th>
-            <th>QSO Race</th>
-            <th>Cool Factor</th>
-            <th>Points</th>
+            <th scope="col">Sport</th>
+            <th scope="col">Target</th>
+            <th scope="col">QSO Race</th>
+            <th scope="col">Cool Factor</th>
+            <th scope="col">Points</th>
         </tr>
     </thead>
     <tbody>
@@ -356,14 +356,14 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Date/Time (UTC)</th>
-            <th>DX Call</th>
-            <th>Band</th>
-            <th>Mode</th>
-            <th>Power</th>
-            <th>QSO Race</th>
-            <th>Cool Factor</th>
-            <th>Confirmed</th>
+            <th scope="col">Date/Time (UTC)</th>
+            <th scope="col">DX Call</th>
+            <th scope="col">Band</th>
+            <th scope="col">Mode</th>
+            <th scope="col">Power</th>
+            <th scope="col">QSO Race</th>
+            <th scope="col">Cool Factor</th>
+            <th scope="col">Confirmed</th>
         </tr>
     </thead>
     <tbody>
