--- a/templates/match.html
+++ b/templates/match.html
@@ -16,12 +16,12 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Rank</th>
-            <th>Callsign</th>
-            <th>QSO Race</th>
-            <th>Cool Factor Medal</th>
-            <th>POTA Bonus</th>
-            <th>Total Points</th>
+            <th scope="col">Rank</th>
+            <th scope="col">Callsign</th>
+            <th scope="col">QSO Race</th>
+            <th scope="col">Cool Factor Medal</th>
+            <th scope="col">POTA Bonus</th>
+            <th scope="col">Total Points</th>
         </tr>
     </thead>
     <tbody>
