--- a/templates/records.html
+++ b/templates/records.html
@@ -9,10 +9,10 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Record Type</th>
-            <th>Value</th>
-            <th>Holder</th>
-            <th>Date</th>
+            <th scope="col">Record Type</th>
+            <th scope="col">Value</th>
+            <th scope="col">Holder</th>
+            <th scope="col">Date</th>
         </tr>
     </thead>
     <tbody>
