--- a/templates/sport.html
+++ b/templates/sport.html
@@ -58,12 +58,12 @@ async function leaveSport() {
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Rank</th>
-            <th>Callsign</th>
-            <th>Gold</th>
-            <th>Silver</th>
-            <th>Bronze</th>
-            <th>Points</th>
+            <th scope="col">Rank</th>
+            <th scope="col">Callsign</th>
+            <th scope="col">Gold</th>
+            <th scope="col">Silver</th>
+            <th scope="col">Bronze</th>
+            <th scope="col">Points</th>
         </tr>
     </thead>
     <tbody>
@@ -90,10 +90,10 @@ async function leaveSport() {
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Target</th>
-            <th>Start Date</th>
-            <th>End Date</th>
-            <th>Action</th>
+            <th scope="col">Target</th>
+            <th scope="col">Start Date</th>
+            <th scope="col">End Date</th>
+            <th scope="col">Action</th>
         </tr>
     </thead>
     <tbody>
