--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
 <div class="table-responsive"><table>
     <thead>
         <tr>
-            <th>Sport</th>
-            <th>Target Type</th>
-            <th>Modes</th>
-            <th></th>
+            <th scope="col">Sport</th>
+            <th scope="col">Target Type</th>
+            <th scope="col">Modes</th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
