--- a/templates/sync.html
+++ b/templates/sync.html
@@ -19,16 +19,16 @@
 {% else %}
     {% if callsign %}
         <div class="table-responsive"><table>
-            <tr><th>Callsign</th><td>{{ result.callsign }}</td></tr>
-            <tr><th>QSOs Fetched</th><td>{{ result.total_fetched }}</td></tr>
-            <tr><th>New QSOs</th><td>{{ result.new_qsos }}</td></tr>
-            <tr><th>Updated QSOs</th><td>{{ result.updated_qsos }}</td></tr>
+            <tr><th scope="col">Callsign</th><td>{{ result.callsign }}</td></tr>
+            <tr><th scope="col">QSOs Fetched</th><td>{{ result.total_fetched }}</td></tr>
+            <tr><th scope="col">New QSOs</th><td>{{ result.new_qsos }}</td></tr>
+            <tr><th scope="col">Updated QSOs</th><td>{{ result.updated_qsos }}</td></tr>
         </table></div>
     {% else %}
         <div class="table-responsive"><table>
-            <tr><th>Competitors Synced</th><td>{{ result.competitors_synced }}</td></tr>
-            <tr><th>Total New QSOs</th><td>{{ result.total_new_qsos }}</td></tr>
-            <tr><th>Total Updated QSOs</th><td>{{ result.total_updated_qsos }}</td></tr>
+            <tr><th scope="col">Competitors Synced</th><td>{{ result.competitors_synced }}</td></tr>
+            <tr><th scope="col">Total New QSOs</th><td>{{ result.total_new_qsos }}</td></tr>
+            <tr><th scope="col">Total Updated QSOs</th><td>{{ result.total_updated_qsos }}</td></tr>
         </table></div>
         {% if result.errors %}
         <h4>Errors</h4>
