Add callsign lookup with names and country flags
- Add callsign_lookup.py service with HamQTH lookup and caching
- Add callsign_cache table for storing lookup results
- Add first_name/last_name columns to competitors table
- Display user name in nav as 'FirstName (CALLSIGN)'
- Add name settings form to update user name
- Show country flag emoji next to DX callsign in QSO table
- Country name shown in hover text

--- a/templates/base.html
+++ b/templates/base.html
@@ -438,7 +438,7 @@
         <span style="float: right;">
             {% if user %}
                 <div class="dropdown">
-                    <button type="button" class="dropdown-toggle">{{ user.callsign }} &#9662;</button>
+                    <button type="button" class="dropdown-toggle">{{ user.display_name }} &#9662;</button>
                     <div class="dropdown-menu">
                         <a href="/dashboard">Dashboard</a>
                         <a href="/settings">Settings</a>
